# q-basic

./: CMakeLists.txt
app/: CMakeLists.txt
app/mini_basic_gui/: CMakeLists.txt  main.cpp
include/: engine.h  parser.h  tokenizer.h  type.h  ui_behavior.h
src/: CMakeLists.txt
src/engine/: CMakeLists.txt
src/engine/mini_basic/: CMakeLists.txt  lib.cpp
src/parser/: CMakeLists.txt  lib.cpp
src/tokenizer/: CMakeLists.txt  lib.cpp
test/: CMakeLists.txt
test/parser/: CMakeLists.txt  test.cpp
test/tokenizer/: CMakeLists.txt  test.cpp
ui/: CMakeLists.txt
ui/main_window/: CMakeLists.txt  main_window.cpp  main_window.h  main_window.ui
